k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: barriofarma
  labels:
    name: barriofarma
    environment: uat
    app.kubernetes.io/name: barriofarma
    app.kubernetes.io/version: "0.0.2-uat"
    app.kubernetes.io/component: application  
    app.kubernetes.io/part-of: barriofarma-stack
    app.kubernetes.io/managed-by: argocd
